# docguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_attack_vector.md
.github/workflows/: ci.yml  release.yml
docs/: attack-taxonomy.md  backend-selection.md  threat-models.md
examples/: basic_usage.py  flask_upload.py  langchain_loader.py  llamaindex_reader.py
src/docguard/: __init__.py  __main__.py  cli.py  report.py  sanitize.py  spotlight.py  types.py  unicode_hygiene.py
src/docguard/docx/: __init__.py  extractors.py  strippers.py
src/docguard/pdf/: __init__.py  extractors.py  strippers.py
src/docguard/semantic/: __init__.py  anthropic_api.py  base.py  classifier_prompt.md  claude_cli.py  dispatcher.py  ollama.py  openai_api.py  regex_only.py
tests/: conftest.py  test_backend_dispatcher.py  test_docx_strippers.py  test_pdf_strippers.py  test_regex.py  test_spotlight.py  test_unicode.py
tools/: make_poisoned_docx.py  make_poisoned_pdf.py
